# Personal-Health-Assistant-for-Diabetics

./: .gitignore  README.md  Temp.ipynb  TempANN.ipynb  TempCatBoost.ipynb  app.py  fast_app.py  pyproject.toml  requirements.txt  teeemp.csv
.ipynb_checkpoints/: Temp-checkpoint.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data_schema/: Data.py
ipython-notebooks/: TempANN.ipynb  TempRFC.ipynb
models/: modelRFC.pkl
models/annModel/: saved_model.pb
models/annModel/variables/: variables.data-00000-of-00001  variables.index
scalers/: standardScaler.pkl
src/personal_health_assistant_for_diabetics/: __init__.py
static/: style.css
templates/: BMI.html  bmiChart.html  diabetes.html  food.html  index.html  medicine.html  prediction.html
