[project]
name = "personal-health-assistant-for-diabetics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nightshade14", email = "satyamchatrola14@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "markupsafe>=3.0.2",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tensorflow[and-cuda]>=2.18.0",
    "werkzeug>=3.1.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
